# NIDS-fullStack

./: README.md  main.py  pyproject.toml
src/: model_trainer.py  network_monitor.py
templates/: index.html
