
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "numpy==1.24.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.14.0",
]
